--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 variables:
   # Azure Resource Manager connection created during pipeline creation
-  azureServiceConnectionId: 'fe50c1e8-1226-4694-9d9d-34b5775ee0da'
+  azureServiceConnectionId: 'myServiceConnection'
   
   # Web app name
   webAppName: 'udacity-azure-cicd-appservice'
@@ -30,8 +30,7 @@ stages:
   displayName: Build stage
   jobs:
   - job: BuildJob
-    pool:
-      vmImage: $(vmImageName)
+    pool: myAgentPool
     steps:
     - task: UsePythonVersion@0
       inputs:
@@ -63,8 +62,7 @@ stages:
   condition: succeeded()
   jobs:
   - deployment: DeploymentJob
-    pool:
-      vmImage: $(vmImageName)
+    pool: myAgentPool
     environment: $(environmentName)
     strategy:
       runOnce:
