--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,4 +80,5 @@ stages:
               azureSubscription: '$(azureServiceConnectionId)'
               appType: 'webAppLinux'
               appName: $(webAppName)
-              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              package: $(System.DefaultWorkingDirectory)/**/*.zip
+          
